# treddy

./: .gitignore  CLAUDE.md  Caddyfile.dev  HARDWARE.md  Makefile  Procfile.dev  README.md  program_engine.py  pyproject.toml  server.py  treadmill_client.py  workout_session.py
.beads/: beads.db  beads.db-shm  beads.db-wal  daemon.pid  last-touched
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
cpp/: Makefile  README.md  config.h  treadmill_io.cpp  treadmill_io.h
cpp/captures/: README.md  RS485_DISCOVERY.md  analyze_logic.py  decode_inverted.py  try3.csv  try7.csv
deploy/: deploy.sh  hrm.service.in  setup.sh  treadmill-server.service.in
hrm/: Cargo.toml  Cross.toml
hrm/src/: debug_server.rs  scanner.rs
ios/: create-project.sh  gen_xcodeproj.py  project.yml
python/: db.py  hrm_client.py  mock_hrm_client.py  mock_treadmill_client.py  program_engine.py  server.py  treadmill_client.py  workout_db.py  workout_session.py
rust/ftms/: Cargo.toml  Cross.toml  README.md
rust/ftms/src/: main.rs  protocol.rs
rust/ftms/tests/: debug_integration.rs
scripts/: dev.sh  pi-lock.sh  setup-worktree.sh  worktree-env.sh
src/: README.md  emulation_engine.h  ipc_protocol.cpp  ipc_protocol.h  ipc_server.cpp  kv_protocol.cpp  kv_protocol.h  mode_state.cpp  mode_state.h  ring_buffer.h  serial_io.h  treadmill_io.h
static/: index.html
tests/: helpers.py  test_program_engine.py  test_server_integration.py  test_session.py
ui/: index.html  vite.config.ts
web/: CLAUDE.md  package-lock.json  package.json
(+281 files in other folders)
