[project]
name = "precor-treadmill"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.5",
    "gpxpy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"
markers = [
    "hardware: marks tests that require Pi hardware (deselect with '-m \"not hardware\"')",
    "voice: marks voice command tests that call Gemini Live API",
    "slow: marks tests that are slow (audio generation, network calls)",
    "intent: marks intent extraction tests that call Gemini Flash API",
]
