[package]
name = "hrm-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hrm-daemon"
path = "src/main.rs"

[dependencies]
bluer = { version = "0.17", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
uuid = "1"
